refactor(dao): replace Collections.emptyList() with List.of() for better return